--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="@string/hintUsername"
+            android:hint="Email"
             android:inputType="textPersonName"
             android:text=""
             android:textSize="@dimen/hint" />
@@ -44,7 +44,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="@string/hintPassword"
-            android:inputType="textPersonName"
+            android:inputType="textPersonName|textWebPassword"
             android:text=""
             android:textSize="@dimen/hint" />
     </LinearLayout>
