--- a/app/src/main/res/layout/activity_event_create.xml
+++ b/app/src/main/res/layout/activity_event_create.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     tools:context="com.example.intern05.meetup.Activities.EventCreateActivity">
 
     <LinearLayout
@@ -21,7 +23,7 @@
             android:paddingRight="10dp"
             android:layout_weight="1"
             android:gravity="end"
-            android:paddingTop="3dp"
+            android:paddingTop="8dp"
             android:text="Invite Friends"
             android:textAlignment="textEnd"
             android:textSize="30sp" />
@@ -32,7 +34,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:clickable="true"
-            android:layout_marginRight="10dp"
+            android:layout_marginRight="18dp"
+            android:layout_marginTop="5dp"
             app:backgroundTint="@color/colorFloatButton"
             app:fabSize="mini"
             app:srcCompat="@drawable/plus" />
@@ -90,6 +93,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
                 android:layout_weight="1"
+                android:textAlignment="center"
+                android:textSize="20sp"
                 android:ems="10"
                 android:inputType="date" />
 
@@ -100,6 +105,34 @@
                 android:layout_marginRight="9dp"
                 android:background="@mipmap/calendar" />
 
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center">
+
+            <TextView
+                android:id="@+id/timeView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Start time"
+                android:paddingLeft="34dp"
+                android:textSize="20sp" />
+
+            <EditText
+                android:id="@+id/timeStart"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:textAlignment="center"
+                android:textSize="20sp"
+                android:focusable="false"
+                android:layout_marginRight="150dp"
+                android:inputType="textPersonName" />
         </LinearLayout>
 
     </LinearLayout>
