--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -45,13 +45,12 @@
                 android:textSize="20sp" />
 
             <EditText
-                android:id="@+id/editText2"
+                android:id="@+id/eventDName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:layout_marginRight="20dp"
+                android:layout_weight="1"
                 android:ems="10"
-                android:hint="Enter event name"
                 android:inputType="textImeMultiLine|textPersonName"
                 android:textAlignment="center" />
         </LinearLayout>
@@ -73,7 +72,7 @@
                 android:textSize="20sp" />
 
             <EditText
-                android:id="@+id/editText3"
+                android:id="@+id/eventDDate"
                 android:layout_width="70dp"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="90dp"
@@ -100,7 +99,7 @@
                 android:textSize="20sp" />
 
             <EditText
-                android:id="@+id/editText4"
+                android:id="@+id/timeDStart"
                 android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="150dp"
