--- a/app/src/main/res/layout/fragment_events.xml
+++ b/app/src/main/res/layout/fragment_events.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.intern05.meetup.Activities.EventActivity">
+    tools:context="com.example.intern05.meetup.Activities.SlideBarActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
